Refactor CORS configuration.